--- a/Themes/GlobalThemes.xaml
+++ b/Themes/GlobalThemes.xaml
@@ -1,7 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
+                    xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks">
     
+    <!--Border Window - Main Window-->
+    <Style x:Key="BorderMainWindow" TargetType="Border">
+        <Setter Property="Background" Value="#3e657d"/>
+        <Setter Property="CornerRadius" Value="10"/>
+    </Style>
     <!--Border Menu Base - Left-->
     <Style x:Key="BorderMenuBase_Left" TargetType="Border">
         <!--<Setter Property="Background" Value="#4287f5"/>-->
@@ -34,7 +39,7 @@
     
     
     <!--Icon Delete-->
-    <Style x:Key="IconDelete" TargetType="iconPacks:PackIconMaterial">
+    <Style x:Key="IconDelete" TargetType="icon:PackIconMaterial">
         <Setter Property="Foreground" Value="#3ca2de"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -44,5 +49,70 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+    
+    <!--Windows Control Button-->
+    <!--Close Window-->
+    <Style x:Key="ButtonCloseWindow" TargetType="Button">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Height" Value="15"/>
+        <Setter Property="Width" Value="15"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Grid Background="Transparent" ToolTip="Close App">
+                        <icon:PackIconMaterial x:Name="Icon"
+                                               Kind="CloseCircle"
+                                               Height="15" Width="15"
+                                               Foreground="#EB1700"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <!--<Setter Property="Cursor" Value="Hand"/>-->
+                            <Setter TargetName="Icon" Property="RenderTransform">
+                                <Setter.Value>
+                                    <TransformGroup>
+                                        <TranslateTransform X="-0.05" Y="-0.05"/>
+                                        <ScaleTransform ScaleX="1.1" ScaleY="1.1"/>
+                                    </TransformGroup>
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <!--Minimize Window-->
+    <Style x:Key="ButtonMinimizeWindow" TargetType="Button">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Height" Value="15"/>
+        <Setter Property="Width" Value="15"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Grid Background="Transparent" ToolTip="Minimize Window">
+                        <icon:PackIconMaterial x:Name="Icon"
+                                               Kind="MinusCircle"
+                                               Height="15" Width="15"
+                                               Foreground="#FFAF01"/>
+                    </Grid>    
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <!--<Setter Property="Cursor" Value="Hand"/>-->
+                            <Setter TargetName="Icon" Property="RenderTransform">
+                                <Setter.Value>
+                                    <TransformGroup>
+                                        <TranslateTransform X="-0.05" Y="-0.05"/>
+                                        <ScaleTransform ScaleX="1.1" ScaleY="1.1"/>
+                                    </TransformGroup>
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
     
 </ResourceDictionary>
